--- a/android/local.properties
+++ b/android/local.properties
@@ -1,6 +1,6 @@
 sdk.dir=/Users/leixun/software/android-sdk-macosx/
 flutter.sdk=/Users/leixun/software/flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
 flutter.minSdkVersionCode=21
