--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,11 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-    flutter_additional_ios_build_settings(target)
+      target.build_configurations.each do |config|
+              if config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f < 11.0
+                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+              end
+      end
+      flutter_additional_ios_build_settings(target)
   end
 end
