--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,13 +92,11 @@ dependencies:
   share_plus: ^4.5.3
   wrapper: ^1.0.2
   dash_painter: ^1.0.2
-  umeng_push_sdk: 1.2.0
-  umeng_common_sdk: 1.2.4
   flutter_image_compress: ^1.1.3
   sign_in_with_apple: ^4.2.0
   flutter_inapp_purchase: ^5.3.1
   flutter_sound: ^9.2.13
-  audio_session: ^0.1.6
+  audio_session: ^0.1.13
 
 dev_dependencies:
   flutter_test:
@@ -158,6 +156,7 @@ flutter:
   # images/*
     - images/weekly_item_eye.png
     - images/weekly_item_bg0.png
+    - images/xunfei.jpeg
     - images/icon_close.png
     - images/weekly_item_bg1.png
     - images/icon_tab3_normal.png
