--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ dependencies:
   flutter_inapp_purchase: ^5.3.1
   flutter_sound: ^9.2.13
   audio_session: 0.1.6
+  flutter_html: 3.0.0-alpha.6
 
 dev_dependencies:
   flutter_test:
