--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -160,6 +160,7 @@ flutter:
   assets:
   # assets-generator-begin
   # images/*
+    - images/article_collect_default.png
     - images/weekly_item_eye.png
     - images/weekly_de_browse.png
     - images/weekly_item_bg0.png
@@ -174,6 +175,7 @@ flutter:
     - images/index_search.png
     - images/index_teacher_icon2.png
     - images/index_icon_8.png
+    - images/article_collect_press.png
     - images/xunfei_english.png
     - images/index_icon_9.png
     - images/icon_back_black.png
@@ -182,6 +184,7 @@ flutter:
     - images/icon_tab4_normal.png
     - images/img.png
     - images/icon_tab1_normal.png
+    - images/article_share.png
     - images/icon_tab3_pressed.png
     - images/index_icon_1.png
     - images/icon_tab2_normal.png
@@ -200,8 +203,10 @@ flutter:
     - images/icon_tab1_pressed.png
     - images/icon_tab2_pressed.png
     - images/index_class_thumb1.png
+    - images/article_listen_derfault.png
     - images/index_ad.png
     - images/index_class_thumb2.png
     - images/index_icon_play.png
+    - images/article_listen_press.png
     - images/weekly_browse.png
     - images/icon_back_blue.png
