--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -183,12 +183,16 @@ flutter:
     - images/index_msg.png
     - images/icon_tab4_normal.png
     - images/img.png
+    - images/splash_icon.png
+    - images/splash_welcome_1.png
     - images/icon_tab1_normal.png
     - images/article_share.png
+    - images/splash_welcome_2.png
     - images/icon_tab3_pressed.png
     - images/index_icon_1.png
     - images/icon_tab2_normal.png
     - images/icon_tab4_pressed.png
+    - images/splash.png
     - images/index_icon_2.png
     - images/welcome_icon.png
     - images/weekly_fabulous.png
