--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,7 @@ dependencies:
 #  flutter_inappwebview: ^5.7.2+3
 #  webview_flutter: ^4.0.1
   flutter_inappwebview: ^6.0.0-beta.22
+  video_player: ^2.4.10
 
 
 dev_dependencies:
