周报列表显示视频标签

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -191,6 +191,7 @@ flutter:
     - images/index_icon_10.png
     - images/index_msg.png
     - images/icon_tab4_normal.png
+    - images/item_play.png
     - images/img.png
     - images/splash_icon.png
     - images/splash_welcome_1.png
