阅读列表默认图

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -221,6 +221,7 @@ flutter:
     - images/index_icon_5.png
     - images/icon_tab1_pressed.png
     - images/icon_tab2_pressed.png
+    - images/reading_default.png
     - images/index_class_thumb1.png
     - images/article_listen_derfault.png
     - images/index_ad.png
