翻页问题临时处理 周报内容居中 居右问题 音频接入

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,6 +103,7 @@ dependencies:
 #  webview_flutter: ^4.0.1
   flutter_inappwebview: ^6.0.0-beta.22
   video_player: ^2.4.10
+  audioplayers: ^1.2.0
 
 
 dev_dependencies:
