--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -177,11 +177,14 @@ flutter:
     - images/torid_five_hide.png
     - images/torid_tixing.png
     - images/torid_close.png
+    - images/torid_one_show.png
     - images/weekly_item_bg0.png
     - images/xunfei.jpeg
+    - images/torid_second.png
     - images/icon_close.png
     - images/weekly_item_bg1.png
     - images/choice_correct.png
+    - images/torid_three_show.png
     - images/icon_tab3_normal.png
     - images/index_class_new.png
     - images/icon_back.png
@@ -190,6 +193,7 @@ flutter:
     - images/index_search.png
     - images/torid_top.png
     - images/index_teacher_icon2.png
+    - images/torid_four_show.png
     - images/article_man_play.png
     - images/torid_eye_hide.png
     - images/index_icon_8.png
@@ -201,6 +205,7 @@ flutter:
     - images/index_icon_10.png
     - images/index_msg.png
     - images/icon_tab4_normal.png
+    - images/torid_two_show.png
     - images/item_play.png
     - images/img.png
     - images/splash_icon.png
@@ -228,6 +233,7 @@ flutter:
     - images/torid_one_hide.png
     - images/index_icon_6.png
     - images/index_icon_4.png
+    - images/torid_five_show.png
     - images/index_icon_5.png
     - images/icon_tab1_pressed.png
     - images/icon_tab2_pressed.png
