--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -182,6 +182,7 @@ flutter:
     - images/xunfei.jpeg
     - images/torid_second.png
     - images/icon_close.png
+    - images/test_pause.png
     - images/weekly_item_bg1.png
     - images/choice_correct.png
     - images/torid_three_show.png
@@ -206,6 +207,7 @@ flutter:
     - images/index_msg.png
     - images/icon_tab4_normal.png
     - images/torid_two_show.png
+    - images/test_play.png
     - images/item_play.png
     - images/img.png
     - images/splash_icon.png
@@ -219,6 +221,7 @@ flutter:
     - images/icon_tab2_normal.png
     - images/torid_four_hide.png
     - images/icon_tab4_pressed.png
+    - images/article_woman_play.png
     - images/splash.png
     - images/home_search.png
     - images/index_icon_2.png
@@ -226,12 +229,14 @@ flutter:
     - images/weekly_fabulous.png
     - images/index_icon_3.png
     - images/weekly_collect.png
+    - images/article_listen_pause.png
     - images/index_icon_7.png
     - images/torid_three_hide.png
     - images/index_class_more.png
     - images/weekly_bg.png
     - images/torid_one_hide.png
     - images/index_icon_6.png
+    - images/article_listen_play.png
     - images/index_icon_4.png
     - images/torid_five_show.png
     - images/index_icon_5.png
@@ -243,7 +248,6 @@ flutter:
     - images/index_ad.png
     - images/torid_two_hide.png
     - images/index_class_thumb2.png
-    - images/test_paly.png
     - images/index_icon_play.png
     - images/article_listen_press.png
     - images/weekly_browse.png
