切出屏幕 暂停音视频播放 启动页UI调试

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -289,6 +289,7 @@ flutter:
     - images/torid_two_hide.png
     - images/icon_transmission_speed_08_clicked.png
     - images/icon_transmission_speed_05.png
+    - images/launch_logo.png
     - images/index_class_thumb2.png
     - images/icon_player_after_play.png
     - images/icon_transmission_speed_15.png
