--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -173,6 +173,7 @@ flutter:
   # images/*
     - images/article_collect_default.png
     - images/torid_right.png
+    - images/my_top_bg.png
     - images/weekly_item_eye.png
     - images/weekly_de_browse.png
     - images/icon_intensive_listening_translate_yes_clicked.png
@@ -205,14 +206,17 @@ flutter:
     - images/index_search.png
     - images/torid_top.png
     - images/index_teacher_icon2.png
+    - images/my_icon_help.png
     - images/torid_four_show.png
     - images/article_man_play.png
+    - images/my_icon_share.png
     - images/test_lrc_json.json
     - images/torid_eye_hide.png
     - images/index_icon_8.png
     - images/article_collect_press.png
     - images/xunfei_english.png
     - images/icon_transmission_speed_05_clicked.png
+    - images/icon_home_me_default_head.png
     - images/index_icon_9.png
     - images/icon_back_black.png
     - images/article_torid_notice.png
@@ -244,6 +248,7 @@ flutter:
     - images/icon_intensive_listening_show_word_no_clicked.png
     - images/icon_tab4_pressed.png
     - images/article_woman_play.png
+    - images/my_icon_coupon.png
     - images/icon_player_play_clicked.png
     - images/login_agree_selected.png
     - images/icon_intensive_listening_translate_no_not_enabled.png
@@ -272,10 +277,12 @@ flutter:
     - images/index_icon_4.png
     - images/iv_no_show.png
     - images/torid_five_show.png
+    - images/my_icon_order.png
     - images/index_icon_5.png
     - images/icon_player_after_play_clicked.png
     - images/icon_tab1_pressed.png
     - images/icon_player_pause.png
+    - images/my_icon_setting.png
     - images/icon_tab2_pressed.png
     - images/icon_transmission_speed_20_selected.png
     - images/icon_intensive_listening_loop_yes_clicked.png
@@ -303,4 +310,5 @@ flutter:
     - images/icon_transmission_speed_10_selected.png
     - images/tree_edit.png
     - images/icon_player_play.png
+    - images/my_icon_right_arrow.png
     - images/icon_transmission_speed_05_selected.png
