--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.9
-  dio: ^4.0.0
+#  dio: ^4.0.0
+  dio:
+    path: ../dio/dio
   ffi: ^2.0.0
   fluttertoast: ^8.0.8
   flutter_screenutil: ^5.4.0
