--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -197,6 +197,7 @@ flutter:
     - images/icon_tab3_normal.png
     - images/index_class_new.png
     - images/icon_back.png
+    - images/icon_to_next.png
     - images/icon_intensive_listening_show_word_yes.png
     - images/icon_intensive_listening_translate_no.png
     - images/index_teacher_icon1.png
