--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -196,15 +196,16 @@ flutter:
     - images/icon_tab3_normal.png
     - images/index_class_new.png
     - images/icon_back.png
-    - images/icon_to_next.png
     - images/icon_intensive_listening_show_word_yes.png
     - images/icon_intensive_listening_translate_no.png
     - images/index_teacher_icon1.png
     - images/icon_transmission_speed_20.png
     - images/weekly_item_shadow.png
     - images/icon_transmission_speed_08.png
+    - images/review_favor_words_icon.png
     - images/index_search.png
     - images/torid_top.png
+    - images/review_jump_practise.png
     - images/index_teacher_icon2.png
     - images/my_icon_help.png
     - images/torid_four_show.png
@@ -213,14 +214,17 @@ flutter:
     - images/student_index_3.png
     - images/torid_eye_hide.png
     - images/index_icon_8.png
+    - images/review_wrong_question_item.png
     - images/article_collect_press.png
     - images/xunfei_english.png
     - images/icon_transmission_speed_05_clicked.png
     - images/icon_home_me_default_head.png
     - images/index_icon_9.png
     - images/student_index_2.png
+    - images/wrong_question_item.png
     - images/student_index_0.png
     - images/icon_back_black.png
+    - images/review_practise_history.png
     - images/article_torid_notice.png
     - images/index_icon_10.png
     - images/icon_intensive_listening_translate_no_clicked.png
@@ -236,6 +240,7 @@ flutter:
     - images/splash_icon.png
     - images/splash_welcome_1.png
     - images/icon_tab1_normal.png
+    - images/review_favor_question_icon.png
     - images/icon_intensive_listening_loop_no.png
     - images/icon_transmission_speed_15_clicked.png
     - images/student_index_4.png
@@ -246,6 +251,7 @@ flutter:
     - images/icon_intensive_listening_show_word_yes_clicked.png
     - images/icon_tab3_pressed.png
     - images/choice_error.png
+    - images/review_reading_tag.png
     - images/index_icon_1.png
     - images/icon_tab2_normal.png
     - images/student_day_words.png
@@ -270,6 +276,7 @@ flutter:
     - images/weekly_fabulous.png
     - images/icon_transmission_speed_12_clicked.png
     - images/index_icon_3.png
+    - images/icon_to_next.png
     - images/weekly_collect.png
     - images/article_listen_pause.png
     - images/index_icon_7.png
@@ -305,6 +312,7 @@ flutter:
     - images/icon_transmission_speed_05.png
     - images/launch_logo.png
     - images/index_class_thumb2.png
+    - images/review_favor_question_bg.png
     - images/icon_player_after_play.png
     - images/icon_transmission_speed_15.png
     - images/welcome_txt.png
