--- a/.gitignore
+++ b/.gitignore
@@ -122,7 +122,9 @@ app.*.map.json
 # Windows
 **/windows/flutter/generated_plugin_registrant.cc
 **/windows/flutter/generated_plugin_registrant.h
+**/windows/flutter/ephemeral/.plugin_symlinks/
 
 # Linux
 **/linux/flutter/generated_plugin_registrant.cc
 **/linux/flutter/generated_plugin_registrant.h
+**/linux/flutter/ephemeral/.plugin_symlinks/
