--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -297,6 +297,8 @@ flutter:
     - images/review_reading_tag.png
     - images/review_top_bg.png
     - images/review_wrong_question_item.png
+    - images/shop_address_location_icon.png
+    - images/shop_image_logo_test.png
     - images/splash.png
     - images/splash_icon.png
     - images/splash_welcome_1.png
