--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,8 @@ dependencies:
   audioplayers: ^3.0.1
   scroll_to_index: ^3.0.1
   sleek_circular_slider: ^2.0.1
+  syncfusion_flutter_sliders: ^20.4.51
+  syncfusion_flutter_core: ^20.4.52
 
 
 dev_dependencies:
