自定义练习记录界面的背景框，自定义绘制虚线和园的处理，列表重新处理

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -288,6 +288,7 @@ flutter:
     - images/my_icon_setting.png
     - images/my_icon_share.png
     - images/my_top_bg.png
+    - images/next_three_icon.png
     - images/player_practise_pause.png
     - images/player_practise_play.png
     - images/player_practise_slide.png
